fixed overflow on large screen.  Added custom animations to tailwind config

--- a/src/index.css
+++ b/src/index.css
@@ -62,11 +62,12 @@
   }
 }
 
-.button--nina {
+.nina {
 	-webkit-transition: background-color 0.3s;
 	transition: background-color 0.3s;
+	
 }
-.button--nina > span {
+.nina > span {
 	display: inline-block;
 	padding: 1em 0;
 	opacity: 0;
@@ -77,7 +78,7 @@
 	-webkit-transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
 	transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
 }
-.button--nina::before {
+.nina::before {
 	content: attr(data-text);
 	position: absolute;
 	top: 0;
@@ -90,53 +91,53 @@
 	-webkit-transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
 	transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
 }
-.button--nina:hover::before {
+.nina:hover::before {
 	opacity: 0;
 	-webkit-transform: translate3d(0, 100%, 0);
 	transform: translate3d(0, 100%, 0);
 }
-.button--nina:hover > span {
+.nina:hover > span {
 	opacity: 1;
 	-webkit-transform: translate3d(0, 0, 0);
 	transform: translate3d(0, 0, 0);
 }
-.button--nina:hover > span:nth-child(1) {
+.nina:hover > span:nth-child(1) {
 	-webkit-transition-delay: 0.045s;
 	transition-delay: 0.045s;
 }
-.button--nina:hover > span:nth-child(2) {
+.nina:hover > span:nth-child(2) {
 	-webkit-transition-delay: 0.09s;
 	transition-delay: 0.09s;
 }
-.button--nina:hover > span:nth-child(3) {
+.nina:hover > span:nth-child(3) {
 	-webkit-transition-delay: 0.135s;
 	transition-delay: 0.135s;
 }
-.button--nina:hover > span:nth-child(4) {
+.nina:hover > span:nth-child(4) {
 	-webkit-transition-delay: 0.18s;
 	transition-delay: 0.18s;
 }
-.button--nina:hover > span:nth-child(5) {
+.nina:hover > span:nth-child(5) {
 	-webkit-transition-delay: 0.225s;
 	transition-delay: 0.225s;
 }
-.button--nina:hover > span:nth-child(6) {
+.nina:hover > span:nth-child(6) {
 	-webkit-transition-delay: 0.27s;
 	transition-delay: 0.27s;
 }
-.button--nina:hover > span:nth-child(7) {
+.nina:hover > span:nth-child(7) {
 	-webkit-transition-delay: 0.315s;
 	transition-delay: 0.315s;
 }
-.button--nina:hover > span:nth-child(8) {
+.nina:hover > span:nth-child(8) {
 	-webkit-transition-delay: 0.36s;
 	transition-delay: 0.36s;
 }
-.button--nina:hover > span:nth-child(9) {
+.nina:hover > span:nth-child(9) {
 	-webkit-transition-delay: 0.405s;
 	transition-delay: 0.405s;
 }
-.button--nina:hover > span:nth-child(10) {
+.nina:hover > span:nth-child(10) {
 	-webkit-transition-delay: 0.45s;
 	transition-delay: 0.45s;
 }
